# vad_rs

./: .gitignore  Cargo.toml  ass.sh  buid_ios.sh  build.rs  build_and.sh
export/android/vad_rs/: build.gradle  build_kimivad.sh  settings.gradle
export/android/vad_rs/app/: build.gradle
export/android/vad_rs/app/src/androidTest/java/com/qktz/vad_rs/: ExampleInstrumentedTest.java
export/android/vad_rs/app/src/main/: AndroidManifest.xml
export/android/vad_rs/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
export/android/vad_rs/app/src/main/java/com/qktz/vad_rs/: AudioResampler.java  MainActivity.java
export/android/vad_rs/app/src/main/res/layout/: activity_main.xml
export/android/vad_rs/app/src/main/res/values/: strings.xml  themes.xml
export/android/vad_rs/app/src/main/res/values-night/: themes.xml
export/android/vad_rs/app/src/test/java/com/qktz/vad_rs/: ExampleUnitTest.java
export/android/vad_rs/gradle/: libs.versions.toml
export/android/vad_rs/gradle/wrapper/: gradle-wrapper.properties
export/android/vad_rs/kimivad/: build.gradle
export/android/vad_rs/kimivad/src/androidTest/java/com/qktz/kimivad/: ExampleInstrumentedTest.java
export/android/vad_rs/kimivad/src/main/java/com/qktz/kimivad/: KimiVad.java
export/android/vad_rs/kimivad/src/test/java/com/qktz/kimivad/: ExampleUnitTest.java
export/ios/: VadParam.h  VadParam.m  VadWrapper.h  VadWrapper.m  make.md
py/: model.onnx  onnx_vad.py  vad.py
src/: lib.rs
src/exposure/: mod.rs  model.rs
src/ort_vad/: mod.rs  silero.rs  speech_state.rs  utils.rs  vad_iter.rs
src/run/: mod.rs
src/util/: mod.rs
