[package]
name = "rust_vad"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "read_wav"
path = "src/bin/read_wav.rs"

[lib]
crate-type = ["rlib"]

[dependencies]
ort = {version = "=2.0.0-rc.5", features = ["ndarray"]}#, default_features = false}
ndarray = "0.16"
hound = "3"
lazy_static = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"

[features]
default = []
android = []
ios = []
macos = []
