[package]
name = "vad_rs"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "read_wav"
path = "src/bin/read_wav.rs"

[lib]
crate-type = ["staticlib"]

[target.'cfg(target_os = "ios")'.lib]
crate-type = ["staticlib"]

[dependencies]
ort-sys = {version = "=2.0.0-rc.8"}
ort = {version = "=2.0.0-rc.8", features = ["ndarray"]}
ndarray = "0.16"
hound = "3"
lazy_static = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
anyhow = "1.0"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"

[features]
default = []
android = []
ios = []
macos = []
