[package]
name = "vad_rs"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "read_wav"
path = "src/bin/read_wav.rs"

[lib]
crate-type = ["cdylib","rlib"]

[build]
rustflags = [ "-v" ]
[target.'cfg(target_os = "ios")'.lib]
crate-type = ["staticlib"]


[target.'cfg(target_os = "android")'.lib]
crate-type = ["cdylib"]

[dependencies]
ort-sys = {version = "=2.0.0-rc.8"}
#ort = {version = "=2.0.0-rc.8", features = ["ndarray", "coreml"]}
ort = {version = "=2.0.0-rc.8", features = ["ndarray","copy-dylibs","half"], default-features = false}
ndarray = "0.16"
hound = "3"
lazy_static = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
anyhow = "1.0"


jni = "0.21.1"


[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
# ort-sys = {version = "=2.0.0-rc.8"}
# ort = {version = "=2.0.0-rc.8", features = ["ndarray"]}

[target.aarch64-linux-android]
rustflags = [ "-Clink-args=-Wl,-rpath,\\$ORIGIN" ]

[profile.dev]
rpath = true

[profile.release]
rpath = true

[features]
default = ["android"]
android = []
ios = []
macos = []
